--- a/Views/Shared/SidebarPartial.cshtml
+++ b/Views/Shared/SidebarPartial.cshtml
@@ -6,14 +6,13 @@
 
 <head>
     <meta charset="utf-8">
-    <title>DLC Shop</title>
+    <title>DLC Shop</title> <!-- Use text only in the <title> tag -->
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
 
     <!-- Favicon -->
-    <link href="LayoutDLC/img/favicon.ico" rel="icon">
-
+    <link rel="icon" href="LayoutDLC/Logo.png" type="image/png"> <!-- Use Logo.png as the favicon -->
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
