Update folder Images + fix images

--- a/Areas/Admin/Views/Admin/ListProduct.cshtml
+++ b/Areas/Admin/Views/Admin/ListProduct.cshtml
@@ -50,7 +50,7 @@
                 <td>
                     @if (!String.IsNullOrEmpty(item.photo))
                     {
-                        <img src="@Url.Content("~/ProductImages/img/" + item.photo)" alt="" style="margin-left:30px; max-width: 300px; max-height: 300px;" />
+                        <img src="@Url.Content("../ProductImages/img/" + item.photo)" alt="" style="margin-left:30px; max-width: 300px; max-height: 300px;" />
                     }
                     else
                     {
