--- a/Views/Contact/Index.cshtml
+++ b/Views/Contact/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
-    Layout = "~/Views/Shared/SidebarPartial.cshtml";
+    ViewData["Title"] = "Contact";
+    Layout = "~/Views/Shared/LayoutDLC.cshtml";
 }
 <!-- Breadcrumb Start -->
 <div class="container-fluid">
