--- a/Views/Shared/LayoutDLC.cshtml
+++ b/Views/Shared/LayoutDLC.cshtml
@@ -200,31 +200,18 @@
                         <div class="carousel-item position-relative active" style="height: 430px;">
                             <img class="position-absolute  w-100 h-100" src="LayoutDLC/img/Banner/bannermanhinh2.jpg" style="object-fit: contain;">
                             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                                <div class="p-3" style="max-width: 700px">
-                                    @* <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">Màn Hình</h1> *@
-                                    @* <p class="mx-md-5 px-5 animate__animated animate__bounceIn">Lorem rebum magna amet lorem magna erat diam stet. Sadips duo stet amet amet ndiam elitr ipsum diam</p> *@
-                                    @* <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Shop Now</a> *@
-                                </div>
                             </div>
                         </div>
                         <div class="carousel-item position-relative" style="height: 430px;">
                             <img class="position-absolute w-100 h-100" src="LayoutDLC/img/banner/laptopbanner.jpeg" style="object-fit: contain;">
                             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                                <div class="p-3" style="max-width: 700px;">
-                                    @* <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">Laptop</h1> *@
-                                    @* <p class="mx-md-5 px-5 animate__animated animate__bounceIn">Lorem rebum magna amet lorem magna erat diam stet. Sadips duo stet amet amet ndiam elitr ipsum diam</p> *@
-                                    @* <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="#">Shop Now</a> *@
-                                </div>
+                                
                             </div>
                         </div>
                         <div class="carousel-item position-relative" style="height: 430px;">
                             <img class="position-absolute w-100 h-100" src="LayoutDLC/img/Banner/gaminggearbanner.jpeg" style="object-fit: contain;">
                             <div class="carousel-caption d-flex flex-column align-items-center justify-content-center">
-                                <div class="p-3" style="max-width: 700px;">
-                                    @* <h1 class="display-4 text-white mb-3 animate__animated animate__fadeInDown">Gaming gear</h1> *@
-                                    @* <p class="mx-md-5 px-5 animate__animated animate__bounceIn">Lorem rebum magna amet lorem magna erat diam stet. Sadips duo stet amet amet ndiam elitr ipsum diam</p> *@
-                                    @* <a class="btn btn-outline-light py-2 px-4 mt-3 animate__animated animate__fadeInUp" href="#" style="margin-top:100px !important;">Shop Now</a> *@
-                                </div>
+                              
                             </div>
                         </div>
                     </div>
@@ -232,8 +219,7 @@
             </div>
             <div class="col-lg-4">
                 <div class="product-offer mb-30" style="height: 200px;">
-                    <img class="img-fluid" 
-                     src="~/productimages/laptop/laptop4.jpg"  alt="">
+                    <img class="img-fluid" src="~/productimages/img/laptop4.jpg"  alt="">
                     <div class="offer-text">
                         <h6 class="text-white text-uppercase">Save 20%</h6>
                         <h3 class="text-white mb-3">Special Offer</h3>
@@ -241,7 +227,7 @@
                     </div>
                 </div>
                 <div class="product-offer mb-30" style="height: 200px;">
-                    <img class="img-fluid" src="~/productimages/manhinh/manhinh1.jpg" alt="">
+                    <img class="img-fluid" src="~/productimages/img/laptop3.jpg" alt="">
                     <div class="offer-text">
                         <h6 class="text-white text-uppercase">Save 20%</h6>
                         <h3 class="text-white mb-3">Special Offer</h3>
@@ -254,7 +240,7 @@
     <!-- Carousel End -->
 
 
-   @*  <!-- Featured Start -->
+  <!-- Featured Start -->
     <div class="container-fluid pt-5">
         <div class="row px-xl-5 pb-3">
             <div class="col-lg-3 col-md-6 col-sm-12 pb-1">
@@ -283,7 +269,7 @@
             </div>
         </div>
     </div>
-    <!-- Featured End --> *@
+    <!-- Featured End --> 
 
 
     <!-- Categories Start -->
@@ -296,7 +282,7 @@
                 <a class="text-decoration-none" href="">
                     <div class="cat-item d-flex align-items-center mb-4">
                         <div class="overflow-hidden" style="width: 100px; height: 100px;">
-                            <img class="img-fluid" src="~/productimages/manhinh/manhinh1.jpg" alt="Màn hình">
+                            <img class="img-fluid" src="~/productimages/img/manhinh1.jpg" alt="Màn hình">
                         </div>
                         <div class="flex-fill pl-3">
                             <h6>Màn hình</h6>
@@ -309,7 +295,7 @@
                 <a class="text-decoration-none" href="">
                     <div class="cat-item img-zoom d-flex align-items-center mb-4">
                         <div class="overflow-hidden" style="width: 100px; height: 100px;">
-                            <img class="img-fluid"  src="~/productimages/laptop/laptop5.jpg"  alt="Lapop">
+                            <img class="img-fluid" src="~/productimages/img/laptop7.jpg"  alt="Lapop">
                         </div>
                         <div class="flex-fill pl-3">
                             <h6>Laptop</h6>
@@ -322,7 +308,7 @@
                 <a class="text-decoration-none" href="">
                     <div class="cat-item img-zoom d-flex align-items-center mb-4">
                         <div class="overflow-hidden" style="width: 100px; height: 100px;">
-                            <img class="img-fluid" src="~/productimages/mouse/mouse1.jpg" alt="Mouse">
+                            <img class="img-fluid" src="~/productimages/img/mouse1.jpg" alt="Mouse">
                         </div>
                         <div class="flex-fill pl-3">
                             <h6>Mouse</h6>
@@ -335,7 +321,7 @@
                 <a class="text-decoration-none" href="">
                     <div class="cat-item img-zoom d-flex align-items-center mb-4">
                         <div class="overflow-hidden" style="width: 100px; height: 100px;">
-                            <img class="img-fluid" src="~/ProductImages/keyboard/keyboard1.jpeg" alt="Keyboard">
+                            <img class="img-fluid" src="~/productimages/img/keyboard1.jpeg" alt="Keyboard">
                         </div>
                         <div class="flex-fill pl-3">
                             <h6>Keyboard</h6>
@@ -351,17 +337,17 @@
  
     <!-- Products Start -->
     <div class="container-fluid pt-5 pb-3">
-        @RenderBody()
-
         <!-- Phần Featured Products -->
-      <h2 class="section-title position-relative text-uppercase mx-xl-5 mb-4">
+      <h2 class="section-title position-relative text-uppercase mx-xl-5 mb-4">        
             <span class="bg-secondary pr-3">@* Featured Products *@</span>
         </h2> 
         <div class="row px-xl-5">
+            @RenderBody()
             <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
                 <div class="product-item bg-light mb-4">
+                   
                     <div class="product-img position-relative overflow-hidden">
-                        <!-- Nội dung sản phẩm sẽ hiển thị ở đây -->
+                        <!-- Nội dung sản phẩm sẽ hiển thị ở đây -->  
                     </div>
                 </div>
             </div>
