--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -15,7 +15,7 @@
         @foreach (var item in Model)
         {
             <div class="col-lg-3 col-md-4 col-sm-6 pb-1">
-                <div class="product-item bg-light mb-4" data-setbg="@Url.Content("../ProductImages/img/" + item.photo)">
+              <div class="product-item bg-light mb-4" data-setbg="@Url.Content("~/ProductImages/img/" + item.photo)">
 
                     <!-- Hiển thị hình ảnh sản phẩm -->
                     @if (!string.IsNullOrEmpty(item.photo))
@@ -30,10 +30,10 @@
                     }
 
                     <div class="product-action">
-                        <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-shopping-cart"></i></a>
+                        <a class="btn btn-outline-dark btn-square" asp-controller="Cart" ><i class="fa fa-shopping-cart"></i></a>
                         <a class="btn btn-outline-dark btn-square" href=""><i class="far fa-heart"></i></a>
                         <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-sync-alt"></i></a>
-                        <a class="btn btn-outline-dark btn-square" href=""><i class="fa fa-search"></i></a>
+                        <a class="btn btn-outline-dark btn-square" asp-controller="Product" asp-action="ProductDetail" ><i class="fa fa-search"></i></a>
                     </div>
                     <div class="text-center py-4">
                         <!-- Hiển thị tên sản phẩm -->
