--- a/Areas/Admin/Views/Admin/ListProduct.cshtml
+++ b/Areas/Admin/Views/Admin/ListProduct.cshtml
@@ -26,27 +26,28 @@
             <th>
                 @Html.DisplayNameFor(model => model.photo)
             </th>
-          @*   <th>
-                @Html.DisplayNameFor(model => model.Details)
+            @*   <th>
+            @Html.DisplayNameFor(model => model.Details)
             </th> *@
-        <th>
+            <th>
                 @Html.DisplayNameFor(model => model.Category)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Manufacturer)
-            </th> 
+            </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr class="table-success">
-            <td>
-                @Html.DisplayFor(modelItem => item.ProductName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Price)
-            </td>
+        @foreach (var item in Model)
+        {
+            <tr class="table-success">
+                <td>
+                    @Html.DisplayFor(modelItem => item.ProductName)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Price)
+                </td>
                 <td>
                     @if (!String.IsNullOrEmpty(item.photo))
                     {
@@ -57,9 +58,9 @@
                         <span>Không có hình ảnh</span>
                     }
                 </td>
-           @*  <td>
-                @Html.DisplayFor(modelItem => item.Details)
-            </td> *@ 
+                @*  <td>
+            @Html.DisplayFor(modelItem => item.Details)
+            </td> *@
                 <td>
                     @if (item.Category != null)
                     {
@@ -81,12 +82,12 @@
                     }
                 </td>
 
-            <td>
+                <td>
                     <a asp-action="EditProduct" class="btn btn-success" asp-route-ProductId="@item.ProductId">Edit</a> |
                     <a asp-action="Details" class="btn btn-primary" asp-route-ProductId="@item.ProductId">Details</a> |
                     <a value="Delete" onclick="return confirm('Are you sure you want to delete the product @item.ProductName?')" asp-action="DeleteProduct" class="btn btn-danger" asp-route-ProductId="@item.ProductId">Delete</a>
-            </td>
-        </tr>
-}
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
