--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -36,7 +36,7 @@
                     </div>
 
                     <div class="product-action">
-                        <a class="btn btn-outline-dark btn-square" asp-controller="Cart"><i class="fa fa-shopping-cart"></i></a>
+                        <a class="btn btn-outline-dark btn-square" ><i class="fa fa-shopping-cart"></i></a>
                         <a class="btn btn-outline-dark btn-square" href="#"><i class="far fa-heart"></i></a>
                         <a class="btn btn-outline-dark btn-square" href="#"><i class="fa fa-sync-alt"></i></a>
                         <a class="btn btn-outline-dark btn-square"><i class="fa fa-search"></i></a>
